@@ -277,3 +277,5 @@ version 5.2.0
 
 version 5.3.0(unreleased)
 -- fix a build time error when build with certain new compilers and a runtime crush when build with other newer compilers.
+-- add more support for wayland sessions by not requiring GUI to run from root's account to perform some operations.
+
